1.5 (2013xxxx)
==============

- Fix "-i" mode, which was previously being ignored completely.
- The latest given of -e, -r, -s is now used as the output format.

1.4.2 (20111003)
================

- Previous value file read/write checks.

1.4.1 (20111001)
================

- Fix negation precedence.

1.4.0 (20110825)
================

- Added -p option to control output precision for -r and -e modes.
- Fix inconsistent output for SI prefixes smaller than m.
- Turkish translations thanks to Angel Spy and Devrim Şahin.
- Updated Czech translations thanks to Kuvaly [LCT].
- Partial Basque man page translations thanks to Mikel Alzibar and gorkaazk.
- Partial French man page translations thanks to Pierre Rudloff.
- Partial Italian man page translations thanks to Guybrush88.
- Updated Hebrew translations.
- Occitan translations thanks to Cédric Valmary.
- Vietnamese translations thanks to Nguyen Quang Chien.


1.3.2.1 (20100212)
==================

- Complete Dutch translations thanks to Yentl.
- Complete Italian translations thanks to Lorenzo Baracchi.
- Completed French translations thanks to Michel Boisset.
- Partial Czech translations thanks to Kuvaly.
- Partial Frisian translations thanks to Wanda Nauta.
- Partial Norwegian Bokmal translations thanks to Sigurd Gartmann.
- Updated Brazilian Portugese translations thanks to Carlos Eduardo Moreira
  dos Santos.
- Updated Spanish translations thanks to Federico Vera and Paco Molinero.


1.3.2 (20090623)
================

- Don't allow equations to start with any of +*/%.
- Completed Spanish translations of program and man page thanks to navnelson.
- Partial Portuguese translations of the man page thanks to Tiago Silva.


1.3.1.4 (20090602)
==================

- Fix typo in Makefile causing translated man pages to not be installed.


1.3.1.3 (20090601)
==================

- Complete Danish translations (both program and man page) thanks to Jimmy
  Frydkær Jensen
- Partial Czech translations of ralcalc by DrakecZ.

